nav link hover effects added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li><img src="assets/icons/wifi.svg" alt="ikonka wifi" /> dostęp do wifi i Netflix</li>
           <li><img src="assets/icons/person.svg" alt="ikonka osób" />do 4 osób</li>
         </ul>
-        <a href="/mapa-podgórze">więcej informacji</a>
+        <a href="/mapa-podgorze">więcej informacji</a>
       </div>
       <img class="apartments-image" src="./assets/photos/mapa-gold.jpg" alt="" />
       <div class="apartments-controls">
@@ -71,7 +71,6 @@
         </button>
         <div class="apartments-dots">
           <button class="dot dot-active"></button>
-          <button class="dot"></button>
           <button class="dot"></button>
         </div>
         <button id="apartments-next" class="apartments-arrow">
