--- a/index.html
+++ b/index.html
@@ -57,29 +57,17 @@
       </div>
     </section>
     <section id="apartamenty" class="apartments">
-      <div class="apartments-card">
-        <h3 id="apartment-name">MaPa Podgórze</h3>
-        <ul>
-          <li><img src="assets/icons/distance.svg" alt="ikonka odległości" /> <span id="apartment-distance">2.9km od Rynku Głównego</span> </li>
-          <li><img src="assets/icons/kitchen.svg" alt="ikonka kuchni" /> <span id="apartment-kitchen">wyposażona kuchnia</span></li>
-          <li><img src="assets/icons/wifi.svg" alt="ikonka wifi" /> <span id="apartment-wifi">dostęp do wifi i Netflix</span></li>
-          <li><img src="assets/icons/person.svg" alt="ikonka osób" /><span id="apartment-capacity">do 4 osób</span></li>
-        </ul>
-        <a id="apartment-link" href="/mapa-podgorze">więcej informacji</a>
-      </div>
-      <div id="next-apartment-card" class="apartments-card">
-        <h3 id="apartment-name">MaPa Kazimierz</h3>
-        <ul>
-          <li><img src="assets/icons/distance.svg" alt="ikonka odległości" /> <span id="apartment-distance">1.1km od Rynku Głównego</span> </li>
-          <li><img src="assets/icons/kitchen.svg" alt="ikonka kuchni" /> <span id="apartment-kitchen">wyposażona kuchnia</span></li>
-          <li><img src="assets/icons/wifi.svg" alt="ikonka wifi" /> <span id="apartment-wifi">dostęp do wifi</span></li>
-          <li><img src="assets/icons/person.svg" alt="ikonka osób" /><span id="apartment-capacity">do 4 dorosłych + 2 dzieci</span></li>
-        </ul>
-        <a id="apartment-link" href="/mapa-podgorze">więcej informacji</a>
-      </div>
-      
-      <img id="active-image" class="apartments-image" src="./assets/photos/mapa-podgorze.jpg" alt="apartament MaPa podgórze" />
-      <img id="next-image" class="apartments-image" src="./assets/photos/mapa-kazimierz.jpg" alt="apartament MaPa Kazmierze" />
+        <div id="active-apartment-card" class="apartments-card">
+          <h3 id="apartment-name">MaPa Podgórze</h3>
+          <ul>
+            <li><img src="assets/icons/distance.svg" alt="ikonka odległości" /> <span id="apartment-distance">2.9km od Rynku Głównego</span> </li>
+            <li><img src="assets/icons/kitchen.svg" alt="ikonka kuchni" /> <span id="apartment-kitchen">wyposażona kuchnia</span></li>
+            <li><img src="assets/icons/wifi.svg" alt="ikonka wifi" /> <span id="apartment-wifi">dostęp do wifi i Netflix</span></li>
+            <li><img src="assets/icons/person.svg" alt="ikonka osób" /><span id="apartment-capacity">do 4 osób</span></li>
+          </ul>
+          <a id="apartment-link" href="/mapa-podgorze">więcej informacji</a>
+        </div>
+      <img class="apartments-image" src="./assets/photos/mapa-kazimierz.jpg" alt="apartament MaPa Kazmierze" />
       <div class="apartments-controls">
         <button id="apartments-previous" class="apartments-arrow">
           <img src="assets/icons/arrow-up.svg" alt="strałka do góry" />
