anchor link margin added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
       </div>
     </section>
-    <section id="apartamenty" class="apartments">
+    <section class="apartments">
+        <div id="apartamenty" class="apartments-anchor"></div>
         <div id="active-apartment-card" class="apartments-card">
           <h3 id="apartment-name">MaPa Podgórze</h3>
           <ul>
