slider fix, font weight fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </nav>
     <section>
       <header>
-        <img class="logo" src="assets/icons/logo.svg" alt="MaPartments logo" />
+        <a href="/">
+          <img class="logo" src="assets/icons/logo.svg" alt="MaPartments logo" />
+        </a>
         <h1>apartamenty dla <span>Ciebie</span></h1>
       </header>
       <div class="landing-slider">
