--- a/mapa-podgorze/index.html
+++ b/mapa-podgorze/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <nav>
-      <img class="logo" src="/assets/icons/logo.svg" alt="MaPartments logo" />
+      <a href="/">
+        <img class="logo" src="/assets/icons/logo.svg" alt="MaPartments logo" />
+      </a>
       <ul>
         <li><a class="nav-link" href="#apartamenty">apatamenty</a></li>
         <li><a class="nav-link nav-link-highlight" href="#kontakt">kontakt</a></li>
