structure changed, apartment caraousel animation improved

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/styles/main.css" />
     <script defer src="/libs/gsap.min.js"></script>
     <script defer src="/libs/ScrollTrigger.min.js"></script>
-    <script defer src="/scripts/apartmentsCaraousel.js"></script>
-    <script defer src="/scripts/contact.js"></script>
+    <script defer src="/scripts/main/apartmentsCaraousel.js"></script>
+    <script defer src="/scripts/main/contact.js"></script>
     <title>MaPartments Kraków</title>
   </head>
   <body>
