--- a/mapa-podgorze/index.html
+++ b/mapa-podgorze/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/mapa-podgorze.css" />
     <script defer src="/libs/gsap.min.js"></script>
-    <script defer src="/scripts/photoSlider.js"></script>
+    <script defer src="/scripts/apartment/photoSlider.js"></script>
     <title>MaPa Pogórze</title>
   </head>
   <body>
@@ -30,6 +30,12 @@
         </ul>
 
         <button id="reservation-button">rezerwacja</button>
+        <div class="reservation-modal">
+          <ul>
+            <li>Telefon: </br><span>+48 795 379 081</span></li>
+            <li>Email: </br><span>biuro@mapartments.krakow.pl</span></li>
+          </ul>
+        </div>
       </div>
       <div class="slider">
         <button id="prev-button" class="slider-arrow"><img src="/assets/icons/previous-button.svg" alt="strzałka do tyłu" /></button>
