css file name change

--- a/mapa-podgorze/index.html
+++ b/mapa-podgorze/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/mapa-podgorze.css" />
+    <link rel="stylesheet" href="/styles/apartment.css" />
     <script defer src="/scripts/apartment/photoSlider.js"></script>
     <script defer src="/scripts/apartment/reservationModal.js"></script>
     <title>MaPa Pogórze</title>
