--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" name="Wybierając i przygotowując Apartamenty dla Państwa wykorzystujemy własne doświadczenia z licznych podróży po
+          całej Europie. Dlatego w Apartamentach MaPa znajdą Państwo wszystko co konieczne dla komfortowego i
+          beztroskiego pobytu. Bez względu na cel wizyty w Krakowie - czy jest to jednodniowy postój na długiej trasie,
+          wyjazd służbowy, czy kilkudniowy pobyt ze zwiedzaniem naszego wyjątkowego miasta!">
     <link rel="stylesheet" href="/styles/main.css" />
     <script defer src="/libs/gsap.min.js"></script>
     <script defer src="/libs/ScrollTrigger.min.js"></script>
