--- a/mapa-kazimierz/index.html
+++ b/mapa-kazimierz/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Kazimierz to wyjątkowa dzielnica nawet na skalę tak niesamowitego miasta jakim jest Kraków. Jej bogata, a zarazem tragiczna historia sprawiła, że powstało miejsce o unikalnej atmosferze. Pełna pamiątek z czasów, gdy stanowiła żydowską enklawę, tętni życiem pełna małych sklepików, galerii, warsztatów, knajpek i wystawnych restauracji. Wkroczysz w jej serce zaledwie przechodząc na drugą stronę ulicy!">
     <link rel="stylesheet" href="/styles/apartment.css" />
     <script defer src="/scripts/apartment/photoSlider.js"></script>
     <script defer src="/scripts/apartment/reservationModal.js"></script>
