--- a/mapa-kazimierz/index.html
+++ b/mapa-kazimierz/index.html
@@ -129,15 +129,33 @@
         </div>
         <button id="next-button" class="slider-arrow"><img src="/assets/icons/next-button.svg" alt="strzałka do przodu" /></button>
         <div class="slider-indicators">
-          <button data-index="0" class="indicator indicator--active"></button>
-          <button data-index="1" class="indicator"></button>
-          <button data-index="2" class="indicator"></button>
-          <button data-index="3" class="indicator"></button>
-          <button data-index="4" class="indicator"></button>
-          <button data-index="5" class="indicator"></button>
-          <button data-index="6" class="indicator"></button>
-          <button data-index="7" class="indicator"></button>
-          <button data-index="8" class="indicator"></button>
+          <button data-index="0" class="indicator indicator--active">
+            <div></div>
+          </button>
+          <button data-index="1" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="2" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="3" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="4" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="5" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="6" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="7" class="indicator">
+            <div></div>
+          </button>
+          <button data-index="8" class="indicator">
+            <div></div>
+          </button>
         </div>
       </div>
     </section>
