--- a/mapa-podgorze/index.html
+++ b/mapa-podgorze/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Podgórze to wyjątkowe miejsce na mapie miasta. Stanowi wciąż cichą i spokojną enklawę pozwalającą odpocząć po dniu spędzonym w pracy i/lub w zgiełku Starego Miasta czy Kazimierza. Bogate we własną historię stanowi idealne miejsce startu „wypraw” do Centrum, na Wawel, do Sanktuarium Bożego Miłosierdza w Łagiewnikach, czy do unikatowej na światową skalę Kopalni Soli w Wieliczce!" />
     <link rel="stylesheet" href="/styles/apartment.css" />
+    <script defer src="/libs/gsap.min.js"></script>
     <script defer src="/scripts/apartment/photoSlider.js"></script>
     <script defer src="/scripts/apartment/reservationModal.js"></script>
     <title>MaPa Pogórze</title>
