--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script defer src="/libs/gsap.min.js"></script>
     <script defer src="/libs/ScrollTrigger.min.js"></script>
     <script defer src="/scripts/main/apartmentsCaraousel.js"></script>
-    <script defer src="/scripts/main/contact.js"></script>
+    <script defer src="/scripts/main/aniamtions.js"></script>
     <title>MaPartments Kraków</title>
   </head>
   <body>
