nav fixed, modal in one file fixed, contact a hrefs

--- a/mapa-podgorze/index.html
+++ b/mapa-podgorze/index.html
@@ -16,10 +16,6 @@
       <a href="/">
         <img class="logo" src="/assets/icons/logo.svg" alt="MaPartments logo" />
       </a>
-      <ul>
-        <li><a class="nav-link" href="#apartamenty">apatamenty</a></li>
-        <li><a class="nav-link nav-link-highlight" href="#kontakt">kontakt</a></li>
-      </ul>
     </nav>
     <section class="apartment">
       <div>
@@ -34,8 +30,8 @@
         <div id="reservation-modal">
           <div class="reservation-modal-inner">
             <ul>
-              <li>Telefon: </br><span>+48 795 379 081</span></li>
-              <li>Email: </br><span>biuro@mapartments.krakow.pl</span></li>
+              <li>Telefon: </br><a href="tel:+48795379081">+48 795 379 081</a></li>
+              <li>Email: </br><a href="mailto:biuro@mapartments.krakow.pl">biuro@mapartments.krakow.pl</a></li>
             </ul>
             <button id="close-button">
               <img src="/assets/icons/close.svg" alt="ikonka zamknięcia">
