--- a/mapa-kazimierz/index.html
+++ b/mapa-kazimierz/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Kazimierz to wyjątkowa dzielnica nawet na skalę tak niesamowitego miasta jakim jest Kraków. Jej bogata, a zarazem tragiczna historia sprawiła, że powstało miejsce o unikalnej atmosferze. Pełna pamiątek z czasów, gdy stanowiła żydowską enklawę, tętni życiem pełna małych sklepików, galerii, warsztatów, knajpek i wystawnych restauracji. Wkroczysz w jej serce zaledwie przechodząc na drugą stronę ulicy!">
     <link rel="stylesheet" href="/styles/apartment.css" />
+    <script defer src="/libs/gsap.min.js"></script>
     <script defer src="/scripts/apartment/photoSlider.js"></script>
     <script defer src="/scripts/apartment/reservationModal.js"></script>
     <title>MaPa Kazimierz</title>
@@ -15,10 +16,6 @@
       <a href="/">
         <img class="logo" src="/assets/icons/logo.svg" alt="MaPartments logo" />
       </a>
-      <ul>
-        <li><a class="nav-link" href="#apartamenty">apatamenty</a></li>
-        <li><a class="nav-link nav-link-highlight" href="#kontakt">kontakt</a></li>
-      </ul>
     </nav>
     <section class="apartment">
       <div>
@@ -33,8 +30,8 @@
         <div id="reservation-modal">
           <div class="reservation-modal-inner">
             <ul>
-              <li>Telefon: </br><span>+48 795 379 081</span></li>
-              <li>Email: </br><span>biuro@mapartments.krakow.pl</span></li>
+              <li>Telefon: </br><a href="tel:+48795379081">+48 795 379 081</a></li>
+              <li>Email: </br><a href="mailto:biuro@mapartments.krakow.pl">biuro@mapartments.krakow.pl</a></li>
             </ul>
             <button id="close-button">
               <img lazy src="/assets/icons/close.svg" alt="ikonka zamknięcia">
